# msw

./: .gitignore  README.md  pyproject.toml
examples/: base.msw  square.msw
src/ric-msw/: __main__.py  compile.py
src/ric_msw.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
